fix: correct the excluded authors

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -1,7 +1,6 @@
 changelog:
     exclude:
         authors:
-            - dependabot
-            - all-contributors
+            - allcontributors[bot]
         labels:
             - documentation
