--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -622,6 +622,15 @@
       "contributions": [
         "review"
       ]
+    },
+    {
+      "login": "pizzaeater",
+      "name": "Evgeny Nepomnyashchiy",
+      "avatar_url": "https://avatars.githubusercontent.com/u/2511553?v=4",
+      "profile": "https://enepom.com/",
+      "contributions": [
+        "review"
+      ]
     }
   ],
   "contributorsPerLine": 7,
