docs: Update @roj1512 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -136,7 +136,8 @@
         "translation",
         "code",
         "ideas",
-        "mentoring"
+        "mentoring",
+        "example"
       ]
     },
     {
