--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "scripts": {
         "prepare": "npm run backport",
         "cache": "deno cache src/mod.ts",
-        "lint": "deno lint --config deno.json",
-        "fmt": "deno fmt --config deno.json",
+        "lint": "deno lint",
+        "fmt": "deno fmt",
         "test": "deno test ./test/",
         "bundle": "cd bundling && ./bundle-all.sh",
         "backport": "deno2node tsconfig.json",
