--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -69,6 +69,8 @@ jobs:
         steps:
             - name: Setup repo
               uses: actions/checkout@v3
+              with:
+                  fetch-depth: 0
 
             - uses: denoland/setup-deno@main
               with:
