--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "lint": "deno lint",
         "fmt": "deno fmt",
         "test": "deno task test",
-        "bundle": "cd bundling && ./bundle-all.sh",
+        "coverage": "deno task coverage",
+        "bundle": "deno task bundle",
         "backport": "deno2node tsconfig.json",
         "contribs": "all-contributors"
     },
