--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,4 +1,11 @@
 {
+    "tasks": {
+        "setup": "npm install && deno cache --check src/mod.ts",
+        "backport": "npm run backport",
+        "test": "deno test --seed=123456 ./test/",
+        "coverage": "deno task test --coverage=./test/cov_profile && deno coverage --lcov --output=./coverage.lcov ./test/cov_profile",
+        "bundle": "cd bundling && ./bundle-all.sh"
+    },
     "fmt": {
         "options": {
             "indentWidth": 4,
