Do not format test coverage files

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -16,7 +16,8 @@
                 "./node_modules/",
                 "./out/",
                 "./package-lock.json",
-                "./bundling/bundles"
+                "./bundling/bundles",
+                "./test/cov_profile"
             ]
         }
     },
