docs: update @code-withAshish as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -197,7 +197,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/73625149?v=4",
       "profile": "https://github.com/code-withAshish",
       "contributions": [
-        "doc"
+        "doc",
+        "question"
       ]
     },
     {
