Rename contributor Tecardo1 to HeeroML

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -31,10 +31,10 @@
       ]
     },
     {
-      "login": "Tecardo1",
-      "name": "Tecardo1",
+      "login": "HeeroML",
+      "name": "Heero",
       "avatar_url": "https://avatars.githubusercontent.com/u/42873000?v=4",
-      "profile": "https://github.com/Tecardo1",
+      "profile": "https://github.com/HeeroML",
       "contributions": [
         "plugin",
         "userTesting",
