--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -671,6 +671,15 @@
         "bug",
         "code"
       ]
+    },
+    {
+      "login": "daniharo",
+      "name": "Dani Haro",
+      "avatar_url": "https://avatars.githubusercontent.com/u/47931084?v=4",
+      "profile": "https://github.com/daniharo",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
