--- a/deno.jsonc
+++ b/deno.jsonc
@@ -5,6 +5,7 @@
         "test": "deno test --seed=123456 --parallel ./test/",
         "dev": "deno fmt && deno lint && deno task test && deno task check",
         "coverage": "deno task test --coverage=./test/cov_profile && deno coverage --lcov --output=./coverage.lcov ./test/cov_profile",
+        "report": "genhtml ./coverage.lcov --output-directory ./test/coverage/",
         "bundle": "cd bundling && ./bundle-all.sh"
     },
     "fmt": {
