--- a/package.json
+++ b/package.json
@@ -35,6 +35,15 @@
     ],
     "main": "./out/mod.js",
     "types": "./out/mod.d.ts",
+    "exports": {
+        "./types": {
+            "types": "./out/types.d.ts"
+        },
+        ".": {
+            "types": "./out/mod.d.ts",
+            "default": "./out/mod.js"
+        }
+    },
     "keywords": [
         "telegram",
         "bot",
