--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -700,6 +700,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "mcpeblocker",
+      "name": "Alisher Ortiqov",
+      "avatar_url": "https://avatars.githubusercontent.com/u/59408255?v=4",
+      "profile": "https://github.com/mcpeblocker",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7,
