doc: add @rainrisa as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -718,6 +718,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "rainrisa",
+      "name": "Ra",
+      "avatar_url": "https://avatars.githubusercontent.com/u/108156134?v=4",
+      "profile": "https://github.com/rainrisa",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
