docs: add sartoshi-foot-dao as a contributor for docs

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -727,6 +727,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "sartoshi-foot-dao",
+      "name": "sartoshi-foot-dao",
+      "avatar_url": "https://avatars.githubusercontent.com/u/99770068?v=4",
+      "profile": "https://github.com/sartoshi-foot-dao",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7,
