chore: make deno the default formatter for VSCode (#277)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "editor.codeActionsOnSave": { "source.fixAll": true },
     "deno.enable": true,
     "deno.lint": true,
-    "deno.config": "./deno.jsonc"
+    "deno.config": "./deno.jsonc",
+    "editor.defaultFormatter": "denoland.vscode-deno"
 }
