chore: update @HeeroML as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -40,7 +40,9 @@
         "userTesting",
         "example",
         "doc",
-        "review"
+        "review",
+        "code",
+        "ideas"
       ]
     },
     {
