chore: add @yn4v4s as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -740,6 +740,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "yn4v4s",
+      "name": "Yoel Navas E.",
+      "avatar_url": "https://avatars.githubusercontent.com/u/35275827?v=4",
+      "profile": "https://github.com/yn4v4s",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7,
