--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -659,7 +659,9 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/26169870?v=4",
       "profile": "https://github.com/Mi3liX9",
       "contributions": [
-        "code"
+        "code",
+        "review",
+        "ideas"
       ]
     },
     {
