--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -751,6 +751,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "vitorleo",
+      "name": "Vitor Gomes",
+      "avatar_url": "https://avatars.githubusercontent.com/u/5118352?v=4",
+      "profile": "https://github.com/vitorleo",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7,
