--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Main
 on:
     push:
         tags:
-            - "*"
+            - "v1.*"
 
 jobs:
     build:
@@ -12,6 +12,23 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v3
+
+            - uses: denoland/setup-deno@v1
+              with:
+                deno-version: v1.x
+
+            - run: npm install --ignore-scripts
+
+            - run: deno task bundle
+
+            - name: Publish to npm
+              run: |
+                npm config set //registry.npmjs.org/:_authToken '${NPM_TOKEN}'
+                npm publish --ignore-scripts
+                cd bundling/bundle
+                npm publish --ignore-scripts
+              env :
+                NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
             - name: Release
               uses: softprops/action-gh-release@v1
