--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -817,6 +817,15 @@
       "contributions": [
         "review"
       ]
+    },
+    {
+      "login": "nlapshin",
+      "name": "Nikolay Lapshin",
+      "avatar_url": "https://avatars.githubusercontent.com/u/39495311?v=4",
+      "profile": "https://github.com/nlapshin",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
