--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Main
 on:
     push:
         tags:
-            - "*"
+            - "v1.*"
 
 jobs:
     build:
@@ -12,6 +12,13 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v3
+
+            - name: Publish to npm
+              run: |
+                npm config set //registry.npmjs.org/:_authToken '${NPM_TOKEN}'
+                npm publish
+              env :
+                NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
             - name: Release
               uses: softprops/action-gh-release@v1
