feat: add grammy/web build script
Besided being called inside `bundle-all.sh`, `deno task bundle-web` can also be used to create the new bundle.
Two files will be created inside the `out` folder: web.js and web.d.ts

The `web.d.ts` file only re-exports everything from `out/mod.d.ts`. This
file is needed because typescript refuses to search for types for the
`web.js` file in anywhere other than a `web.d.ts` placed next to it.
That behavior should be overriden by the `typesVersions` property in
`package.json`, but for some reason it's not. The `typesVersions`
property is necessary to make typescript detect the `/web` entrypoint,
though.

--- a/package.json
+++ b/package.json
@@ -36,12 +36,23 @@
     "main": "./out/mod.js",
     "types": "./out/mod.d.ts",
     "exports": {
-        "./types": {
-            "types": "./out/types.d.ts"
-        },
         ".": {
             "types": "./out/mod.d.ts",
             "default": "./out/mod.js"
+        },
+        "./types": {
+            "types": "./out/types.d.ts"
+        },
+        "./web": {
+            "types": "./out/web.d.ts",
+            "default": "./out/web.js"
+        }
+    },
+    "typesVersions": {
+        "*": {
+            "web": [
+                "out/web"
+            ]
         }
     },
     "keywords": [
