--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,9 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v3
 
+            - name: Backport
+              run: npm run backport
+
             - name: Publish to npm
               run: |
                 npm config set //registry.npmjs.org/:_authToken '${NPM_TOKEN}'
