chore: ignore web files when backporting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,12 @@
         "skipLibCheck": true,
         "target": "es2019"
     },
-    "include": ["src/"],
+    "include": [
+        "src/"
+    ],
+    "exclude": [
+        "src/*.web.ts"
+    ],
     "deno2node": {
         "shim": "./src/shim.node.ts"
     }
