--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
               uses: actions/checkout@v3
 
             - name: Backport
-              run: npm run backport
+              run: npm ci --ignore-scripts && npm run backport
 
             - name: Publish to npm
               run: |
