feat: build logs, use .mjs

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         },
         "./web": {
             "types": "./out/web.d.ts",
-            "default": "./out/web.js"
+            "default": "./out/web.mjs"
         }
     },
     "typesVersions": {
