--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,7 @@ jobs:
 
             - run: npm ci --ignore-scripts
             - run: npm run backport
+            - run: npm run bundle-web
 
             - name: Publish to npm
               run: |
