--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,23 +13,21 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v3
 
-            - run: npm ci --ignore-scripts
-            - run: npm run backport
-            
             # Setup deno so we can bundle for the web
-            
+
             - uses: denoland/setup-deno@main
               with:
                   deno-version: v1.x
-            
+
+            - run: npm install
             - run: deno task bundle-web
 
             - name: Publish to npm
               run: |
-                npm config set //registry.npmjs.org/:_authToken '${NPM_TOKEN}'
-                npm publish --ignore-scripts
+                  npm config set //registry.npmjs.org/:_authToken '${NPM_TOKEN}'
+                  npm publish --ignore-scripts
               env:
-                NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+                  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
             - name: Release
               uses: softprops/action-gh-release@v1
