--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "prepare": "npm run backport",
         "backport": "deno2node tsconfig.json",
         "contribs": "all-contributors",
-        "bundle-web": "mkdir -p out && cd bundling && deno run --unstable --quiet --allow-net --allow-read --allow-env=DENO_DIR,XDG_CACHE_HOME,HOME,DENO_AUTH_TOKENS --allow-write=../out bundle-web.ts dev ../src/mod.ts"
+        "bundle-web": "mkdir -p out deno_cache && cd bundling && DENO_DIR=$PWD/../deno_cache deno run --unstable --quiet --allow-net --allow-read --allow-env=DENO_DIR,XDG_CACHE_HOME,HOME,DENO_AUTH_TOKENS --allow-write=../out,$PWD/../deno_cache bundle-web.ts dev ../src/mod.ts"
     },
     "dependencies": {
         "@grammyjs/types": "^2.10.3",
