--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -908,6 +908,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "tup4ienko",
+      "name": "Svyatoslav Tupchienko",
+      "avatar_url": "https://avatars.githubusercontent.com/u/89318613?v=4",
+      "profile": "https://github.com/tup4ienko",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
