--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -917,6 +917,16 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "evermake",
+      "name": "Vladislav Deryabkin",
+      "avatar_url": "https://avatars.githubusercontent.com/u/53311479?v=4",
+      "profile": "https://github.com/evermake",
+      "contributions": [
+        "bug",
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
