--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -936,6 +936,16 @@
       "contributions": [
         "example"
       ]
+    },
+    {
+      "login": "AlexOwl",
+      "name": "AlexOwl",
+      "avatar_url": "https://avatars.githubusercontent.com/u/47189254?v=4",
+      "profile": "https://github.com/AlexOwl",
+      "contributions": [
+        "bug",
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
