docs: add @SpEcHiDe as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -946,6 +946,15 @@
         "bug",
         "code"
       ]
+    },
+    {
+      "login": "SpEcHiDe",
+      "name": "Shrimadhav U K",
+      "avatar_url": "https://avatars.githubusercontent.com/u/6317196?v=4",
+      "profile": "https://www.shrimadhavuk.me/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
