--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -955,6 +955,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "binamralamsal",
+      "name": "Binamra Lamsal",
+      "avatar_url": "https://avatars.githubusercontent.com/u/61900781?v=4",
+      "profile": "https://github.com/binamralamsal",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7,
