docs: update @evermake as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -925,7 +925,8 @@
       "profile": "https://github.com/evermake",
       "contributions": [
         "bug",
-        "code"
+        "code",
+        "review"
       ]
     },
     {
