--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -838,7 +838,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/81624781?v=4",
       "profile": "https://github.com/Aquathing",
       "contributions": [
-        "doc"
+        "doc",
+        "question"
       ]
     },
     {
