--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -966,6 +966,16 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "gertminov",
+      "name": "gertminov",
+      "avatar_url": "https://avatars.githubusercontent.com/u/78727928?v=4",
+      "profile": "https://github.com/gertminov",
+      "contributions": [
+        "doc",
+        "tutorial"
+      ]
     }
   ],
   "contributorsPerLine": 7,
