Add @mrmaster009 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -995,6 +995,15 @@
         "bug",
         "review"
       ]
+    },
+    {
+      "login": "mrmaster009",
+      "name": "mrmaster009",
+      "avatar_url": "https://avatars.githubusercontent.com/u/81420490?v=4",
+      "profile": "https://github.com/mrmaster009",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7,
