--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1004,6 +1004,18 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "LWJerri",
+      "name": "Andrey Zontov",
+      "avatar_url": "https://avatars.githubusercontent.com/u/50290430?v=4",
+      "profile": "https://lwjerri.dev/",
+      "contributions": [
+        "bug",
+        "code",
+        "question",
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7,
