docs: add @AbbassAlmusawi as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1016,6 +1016,15 @@
         "question",
         "ideas"
       ]
+    },
+    {
+      "login": "AbbassAlmusawi",
+      "name": "Abbass Al-Musawi",
+      "avatar_url": "https://avatars.githubusercontent.com/u/73327881?v=4",
+      "profile": "https://github.com/AbbassAlmusawi",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7,
