--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,5 @@
     "deno.enable": true,
     "deno.lint": true,
     "deno.config": "./deno.jsonc",
-    "editor.defaultFormatter": "denoland.vscode-deno",
-    "vue.features.codeActions.enable": false
+    "editor.defaultFormatter": "denoland.vscode-deno"
 }
