--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
     "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-        "source.fixAll": true
-    },
+    "editor.codeActionsOnSave": { "source.fixAll": true },
     "deno.enable": true,
     "deno.lint": true,
     "deno.config": "./deno.jsonc",
