--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1046,6 +1046,15 @@
         "ideas",
         "code"
       ]
+    },
+    {
+      "login": "MatyiFKBT",
+      "name": "MatyiFKBT",
+      "avatar_url": "https://avatars.githubusercontent.com/u/6183867?v=4",
+      "profile": "https://github.com/MatyiFKBT",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7,
