--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1064,6 +1064,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "kiyasov",
+      "name": "Islam Kiiasov",
+      "avatar_url": "https://avatars.githubusercontent.com/u/16527461?v=4",
+      "profile": "https://github.com/kiyasov",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
