docs: update @code-withAshish as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -203,7 +203,9 @@
       "profile": "https://github.com/code-withAshish",
       "contributions": [
         "doc",
-        "question"
+        "question",
+        "bug",
+        "review"
       ]
     },
     {
