--- a/deno.jsonc
+++ b/deno.jsonc
@@ -11,30 +11,24 @@
         "bundle-web": "mkdir -p out deno_cache && cd bundling && DENO_DIR=$PWD/../deno_cache deno run --unstable --quiet --allow-net --allow-read --allow-env=DENO_DIR,XDG_CACHE_HOME,HOME,DENO_AUTH_TOKENS --allow-write=../out,$PWD/../deno_cache bundle-web.ts dev ../src/mod.ts"
     },
     "fmt": {
-        "options": {
-            "indentWidth": 4,
-            "proseWrap": "preserve"
-        },
-        "files": {
-            "exclude": [
-                "./deno_cache/",
-                "./node_modules/",
-                "./out/",
-                "./package-lock.json",
-                "./bundling/bundles",
-                "./test/cov_profile"
-            ]
-        }
+        "indentWidth": 4,
+        "proseWrap": "preserve",
+        "exclude": [
+            "./deno_cache/",
+            "./node_modules/",
+            "./out/",
+            "./package-lock.json",
+            "./bundling/bundles",
+            "./test/cov_profile"
+        ]
     },
     "lint": {
-        "files": {
-            "exclude": [
-                "./deno_cache/",
-                "./node_modules/",
-                "./out/",
-                "./package-lock.json",
-                "./bundling/bundles"
-            ]
-        }
+        "exclude": [
+            "./deno_cache/",
+            "./node_modules/",
+            "./out/",
+            "./package-lock.json",
+            "./bundling/bundles"
+        ]
     }
 }
