--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "@types/debug": "^4.1.8",
         "@types/node": "^12.20.55",
         "@types/node-fetch": "2.6.2",
-        "all-contributors-cli": "^6.26.0",
+        "all-contributors-cli": "6.24.0",
         "deno2node": "^1.8.1"
     },
     "files": [
