--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1112,6 +1112,15 @@
         "translation",
         "maintenance"
       ]
+    },
+    {
+      "login": "MajorLettuce",
+      "name": "Aleksei Ivanov",
+      "avatar_url": "https://avatars.githubusercontent.com/u/3730149?v=4",
+      "profile": "https://github.com/MajorLettuce",
+      "contributions": [
+        "review"
+      ]
     }
   ],
   "contributorsPerLine": 7,
