docs: update @knorpelsenf as a contributor for a11y
https://github.com/grammyjs/website/pull/112

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -31,7 +31,8 @@
         "mentoring",
         "projectManagement",
         "infra",
-        "audio"
+        "audio",
+        "a11y"
       ]
     },
     {
