docs: add @louietyj as a contributor for review

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1139,6 +1139,15 @@
         "code",
         "platform"
       ]
+    },
+    {
+      "login": "louietyj",
+      "name": "Louie Tan",
+      "avatar_url": "https://avatars.githubusercontent.com/u/11096034?v=4",
+      "profile": "https://github.com/louietyj",
+      "contributions": [
+        "review"
+      ]
     }
   ]
 }
