build: add `bundling/build-cjs.ts`

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,13 +2,13 @@
     "lock": false,
     "tasks": {
         "check": "deno cache --check=all src/mod.ts",
-        "backport": "deno run --no-prompt --allow-read=. --allow-write=. https://deno.land/x/deno2node@v1.8.1/src/cli.ts tsconfig.json",
+        "contribs": "npx --yes all-contributors-cli@6",
+        "backport": "deno run --no-prompt --allow-read=. --allow-write=out/ bundling/build-cjs.ts src/mod.ts",
         "test": "deno test --seed=123456 --parallel ./test/",
         "dev": "deno fmt && deno lint && deno task test && deno task check",
         "coverage": "rm -rf ./test/cov_profile && deno task test --coverage=./test/cov_profile && deno coverage --lcov --output=./coverage.lcov ./test/cov_profile",
         "report": "genhtml ./coverage.lcov --output-directory ./test/coverage/ && echo 'Point your browser to test/coverage/index.html to see the test coverage report.'",
-        "bundle": "cd bundling && ./bundle-all.sh",
-        "bundle-web": "mkdir -p out deno_cache && cd bundling && DENO_DIR=$PWD/../deno_cache deno run --unstable --quiet --allow-net --allow-read --allow-env=DENO_DIR,XDG_CACHE_HOME,HOME,DENO_AUTH_TOKENS --allow-write=../out,$PWD/../deno_cache bundle-web.ts dev ../src/mod.ts"
+        "bundle-web": "mkdir -p out deno_cache && deno run --quiet --allow-net --allow-read --allow-env=DENO_AUTH_TOKENS --allow-write=out/,deno_cache/ bundling/bundle-web.ts dev src/mod.ts"
     },
     "fmt": {
         "indentWidth": 4,
@@ -18,7 +18,6 @@
             "./node_modules/",
             "./out/",
             "./package-lock.json",
-            "./bundling/bundles",
             "./test/cov_profile"
         ]
     },
@@ -27,8 +26,7 @@
             "./deno_cache/",
             "./node_modules/",
             "./out/",
-            "./package-lock.json",
-            "./bundling/bundles"
+            "./package-lock.json"
         ]
     }
 }
