--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     },
     "scripts": {
         "prepare": "npm run backport",
-        "backport": "deno2node tsconfig.json",
-        "contribs": "all-contributors"
+        "backport": "deno2node tsconfig.json"
     },
     "dependencies": {
         "@grammyjs/types": "3.2.0",
@@ -27,7 +26,6 @@
         "@types/debug": "^4.1.8",
         "@types/node": "^12.20.55",
         "@types/node-fetch": "2.6.2",
-        "all-contributors-cli": "6.24.0",
         "deno2node": "^1.8.1"
     },
     "files": [
