docs: add @HeySreelal as a contributor for bug, code

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1179,6 +1179,16 @@
         "ideas",
         "review"
       ]
+    },
+    {
+      "login": "HeySreelal",
+      "name": "Sree (Taylor's Version)",
+      "avatar_url": "https://avatars.githubusercontent.com/u/94184909?v=4",
+      "profile": "https://github.com/HeySreelal",
+      "contributions": [
+        "bug",
+        "code"
+      ]
     }
   ]
 }
