--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1200,6 +1200,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "gabeklavans",
+      "name": "gabe",
+      "avatar_url": "https://avatars.githubusercontent.com/u/32149200?v=4",
+      "profile": "https://github.com/gabeklavans",
+      "contributions": [
+        "review"
+      ]
     }
   ]
 }
