--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -245,7 +245,7 @@
       "login": "Satont",
       "name": "Satont",
       "avatar_url": "https://avatars.githubusercontent.com/u/42675886?v=4",
-      "profile": "https://satont.js.org/",
+      "profile": "https://github.com/satont",
       "contributions": [
         "plugin",
         "doc"
