fix: properly define the subpath ./types in exports (#517)
* fix: correct `types` subexport

* Update package.json

---------

Co-authored-by: KnorpelSenf <shtrog@gmail.com>

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
             "default": "./out/web.mjs"
         },
         "./types": {
-            "types": "./out/types.d.ts"
+            "types": "./out/types.d.ts",
+            "default": "./out/types.js"
         },
         "./web": {
             "types": "./out/web.d.ts",
