--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1209,6 +1209,15 @@
       "contributions": [
         "review"
       ]
+    },
+    {
+      "login": "Rnbsov",
+      "name": "Lavrentiy Rubtsov",
+      "avatar_url": "https://avatars.githubusercontent.com/u/73550760?v=4",
+      "profile": "https://github.com/Rnbsov",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
