--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,18 @@
-name: Deploy
-on:
-  push:
-    branches: main
-  pull_request:
-    branches: main
-
-jobs:
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-
-    permissions:
-      id-token: write # Needed for auth with Deno Deploy
-      contents: read # Needed to clone the repository
-
-    steps:
-      - name: Clone repository
-        uses: actions/checkout@v3
-
-      - name: Install Deno
-        uses: denoland/setup-deno@v1
-        with:
-          deno-version: v1.x
-
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: lts/*
-
-      - name: Build step
-        run: "npm install && npm run build" # 📝 Update the build command(s) if necessary
-
-      - name: Upload to Deno Deploy
-        uses: denoland/deployctl@v1
-        with:
-          project: "clear-gnu-70"
-          entrypoint: "index.js" # 📝 Update the entrypoint if necessary
-          root: "." # 📝 Update the root if necessary
+            - name: Deploy to Deno Deploy
+  # You may pin to the exact commit or the version.
+  # uses: denoland/deployctl@f21311b48f62f0063e3c729fc8a6a5dcdc4da7f9
+  uses: denoland/deployctl@1.10.3
+  with:
+    # The name or ID of the project to deploy
+    project: 
+    # The path or URL to the entrypoint file
+    entrypoint: 
+    # The path or URL to an import map file
+    import-map: # optional
+    # Only upload files that match this pattern (multiline and/or comma-separated)
+    include: # optional
+    # Exclude files that match this pattern (multiline and/or comma-separated)
+    exclude: # optional
+    # The path to the directory containing the code and assets to upload
+    root: # optional
+          
