--- a/deno.jsonc
+++ b/deno.jsonc
@@ -9,7 +9,7 @@
         "report": "genhtml ./coverage.lcov --output-directory ./test/coverage/ && echo 'Point your browser to test/coverage/index.html to see the test coverage report.'",
         "bundle": "cd bundling && ./bundle-all.sh",
         "bundle-web": "mkdir -p out deno_cache && cd bundling && DENO_DIR=$PWD/../deno_cache deno run --unstable --quiet --allow-net --allow-read --allow-env=DENO_DIR,XDG_CACHE_HOME,HOME,DENO_AUTH_TOKENS --allow-write=../out,$PWD/../deno_cache bundle-web.ts dev ../src/mod.ts",
-        "contribs": "deno run --allow-env --allow-read --allow-write=. --allow-net=api.github.com npm:all-contributors-cli"
+        "contribs": "deno run --allow-env --allow-read --allow-write=. --allow-net=api.github.com --allow-sys npm:all-contributors-cli"
     },
     "fmt": {
         "indentWidth": 4,
