docs: update @abdoo9 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -821,7 +821,9 @@
       "profile": "https://github.com/abdoo9",
       "contributions": [
         "bug",
-        "code"
+        "code",
+        "review",
+        "doc"
       ]
     },
     {
