--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "@types/debug": "^4.1.12",
         "@types/node": "^12.20.55",
         "@types/node-fetch": "2.6.2",
-        "deno2node": "^1.9.0"
+        "deno2node": "^1.9.0",
+        "typescript": "^5.5.0-dev.20240401"
     },
     "files": [
         "out/"
