--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "editor.codeActionsOnSave": {
         "source.fixAll": "explicit"
     },
-    "deno.enable": true,
+    "deno.enable": false,
     "deno.config": "./deno.jsonc",
     "deno.lint": true,
     "[typescript]": {
