Revert "disable deno lsp"
This reverts commit 27077463f9fc8a8797a4286ff69bbf19cb9a6a1c.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "editor.codeActionsOnSave": {
         "source.fixAll": "explicit"
     },
-    "deno.enable": false,
+    "deno.enable": true,
     "deno.config": "./deno.jsonc",
     "deno.lint": true,
     "[typescript]": {
