--- a/deno.jsonc
+++ b/deno.jsonc
@@ -7,7 +7,6 @@
         "dev": "deno fmt && deno lint && deno task test && deno task check",
         "coverage": "rm -rf ./test/cov_profile && deno task test --coverage=./test/cov_profile && deno coverage --lcov --output=./coverage.lcov ./test/cov_profile",
         "report": "genhtml ./coverage.lcov --output-directory ./test/coverage/ && echo 'Point your browser to test/coverage/index.html to see the test coverage report.'",
-        "bundle": "cd bundling && ./bundle-all.sh",
         "bundle-web": "mkdir -p out deno_cache && cd bundling && DENO_DIR=$PWD/../deno_cache deno run --unstable --quiet --allow-net --allow-read --allow-env=DENO_DIR,XDG_CACHE_HOME,HOME,DENO_AUTH_TOKENS --allow-write=../out,$PWD/../deno_cache bundle-web.ts dev ../src/mod.ts",
         "contribs": "deno run --allow-env --allow-read --allow-write=. --allow-net=api.github.com --allow-sys npm:all-contributors-cli"
     },
@@ -31,5 +30,10 @@
             "./package-lock.json",
             "./bundling/bundles"
         ]
+    },
+    "imports": {
+        "@std/path": "jsr:@std/path@^0.221.0",
+        "grammy_types": "https://deno.land/x/grammy_types@v3.6.2/mod.ts",
+        "debug": "https://cdn.skypack.dev/debug@4.3.4"
     }
 }
