docs: add @dimpurr as a contributor for bug, code

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1248,6 +1248,16 @@
         "bug",
         "code"
       ]
+    },
+    {
+      "login": "dimpurr",
+      "name": "Dim Chen",
+      "avatar_url": "https://avatars.githubusercontent.com/u/5173244?v=4",
+      "profile": "https://github.com/dimpurr",
+      "contributions": [
+        "bug",
+        "code"
+      ]
     }
   ]
 }
