docs: add @zivc as a contributor for review

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1286,6 +1286,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "zivc",
+      "name": "Ash",
+      "avatar_url": "https://avatars.githubusercontent.com/u/4239224?v=4",
+      "profile": "http://zi.vc/",
+      "contributions": [
+        "review"
+      ]
     }
   ]
 }
