chore: add @carafelix as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1307,6 +1307,18 @@
         "review",
         "test"
       ]
+    },
+    {
+      "login": "carafelix",
+      "name": "Hero Protagonist",
+      "avatar_url": "https://avatars.githubusercontent.com/u/48109042?v=4",
+      "profile": "https://github.com/carafelix",
+      "contributions": [
+        "code",
+        "bug",
+        "ideas",
+        "plugin"
+      ]
     }
   ]
 }
