doc: add @SunsetTechuila as a contributor for ideas, code, doc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1340,6 +1340,17 @@
         "ideas",
         "code"
       ]
+    },
+    {
+      "login": "SunsetTechuila",
+      "name": "Grigory",
+      "avatar_url": "https://avatars.githubusercontent.com/u/115353812?v=4",
+      "profile": "https://github.com/SunsetTechuila",
+      "contributions": [
+        "ideas",
+        "code",
+        "doc"
+      ]
     }
   ]
 }
