docs: update @AbbassAlmusawi as a contributor
https://github.com/grammyjs/auto-retry/pull/7

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1042,7 +1042,8 @@
       "profile": "https://github.com/AbbassAlmusawi",
       "contributions": [
         "doc",
-        "bug"
+        "bug",
+        "code"
       ]
     },
     {
