docs: add @aleveha as a contributor for code
https://github.com/grammyjs/tools/pull/28

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1352,6 +1352,15 @@
         "code",
         "doc"
       ]
+    },
+    {
+      "login": "aleveha",
+      "name": "aleveha",
+      "avatar_url": "https://avatars.githubusercontent.com/u/63300936?v=4",
+      "profile": "https://github.com/aleveha",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
