docs: add @barinbritva as a contributor for review
https://github.com/grammyjs/examples/pull/40

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1361,6 +1361,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "barinbritva",
+      "name": "barinbritva",
+      "avatar_url": "https://avatars.githubusercontent.com/u/4758362?v=4",
+      "profile": "https://github.com/barinbritva",
+      "contributions": [
+        "review"
+      ]
     }
   ]
 }
