docs: add @flmel as a contributor for example

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1370,6 +1370,15 @@
       "contributions": [
         "review"
       ]
+    },
+    {
+      "login": "flmel",
+      "name": "Lyudmil Ivanov",
+      "avatar_url": "https://avatars.githubusercontent.com/u/55487633?v=4",
+      "profile": "https://github.com/flmel",
+      "contributions": [
+        "example"
+      ]
     }
   ]
 }
