docs: add @rayz1065 as a contributor for question

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1397,6 +1397,15 @@
       "contributions": [
         "review"
       ]
+    },
+    {
+      "login": "rayz1065",
+      "name": "rayz",
+      "avatar_url": "https://avatars.githubusercontent.com/u/37779815?v=4",
+      "profile": "https://github.com/rayz1065",
+      "contributions": [
+        "question"
+      ]
     }
   ]
 }
