chore: make tests compatible with Deno 2.0

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,6 @@
 {
     "lock": false,
+    "nodeModulesDir": "none",
     "tasks": {
         "check": "deno cache --check=all src/mod.ts",
         "backport": "deno run --no-prompt --allow-read=. --allow-write=. https://deno.land/x/deno2node@v1.13.0/src/cli.ts tsconfig.json",
